src/grammar_testing/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> expr
Rule 2     program -> statement_list
Rule 3     statement_list -> <empty>
Rule 4     statement_list -> statement statement_list
Rule 5     statement -> FUNCTION IDENTIFIER ( param_list ) { statement_list return_stmt }
Rule 6     statement -> WHILE ( bool_expr ) { statement_list }
Rule 7     statement -> IF ( bool_expr ) { statement_list } else_clause
Rule 8     statement -> PRINT ( expr )
Rule 9     statement -> IDENTIFIER ASSIGN expr
Rule 10    bool_expr -> expr
Rule 11    else_clause -> <empty>
Rule 12    else_clause -> ELSE { statement_list }
Rule 13    param_list -> <empty>
Rule 14    param_list -> IDENTIFIER
Rule 15    param_list -> IDENTIFIER , param_list
Rule 16    return_stmt -> <empty>
Rule 17    return_stmt -> RETURN expr
Rule 18    expr -> ( expr )
Rule 19    expr -> BOOLEAN
Rule 20    expr -> STRING
Rule 21    expr -> FLOAT
Rule 22    expr -> INTEGER
Rule 23    expr -> IDENTIFIER
Rule 24    expr -> IDENTIFIER ( arg_list )
Rule 25    expr -> FUMINUS expr  [precedence=right, level=4]
Rule 26    expr -> UMINUS expr  [precedence=right, level=4]
Rule 27    expr -> expr FNEQ expr  [precedence=left, level=1]
Rule 28    expr -> expr FEQ expr  [precedence=left, level=1]
Rule 29    expr -> expr NEQ expr  [precedence=left, level=1]
Rule 30    expr -> expr EQ expr  [precedence=left, level=1]
Rule 31    expr -> expr CONCAT expr  [precedence=left, level=2]
Rule 32    expr -> expr FDIVIDE expr  [precedence=left, level=3]
Rule 33    expr -> expr FTIMES expr  [precedence=left, level=3]
Rule 34    expr -> expr FMINUS expr  [precedence=left, level=2]
Rule 35    expr -> expr FPLUS expr  [precedence=left, level=2]
Rule 36    expr -> expr DIVIDE expr  [precedence=left, level=3]
Rule 37    expr -> expr TIMES expr  [precedence=left, level=3]
Rule 38    expr -> expr MINUS expr  [precedence=left, level=2]
Rule 39    expr -> expr PLUS expr  [precedence=left, level=2]
Rule 40    arg_list -> <empty>
Rule 41    arg_list -> expr
Rule 42    arg_list -> expr , arg_list

Terminals, with rules where they appear:

(                    : 5 6 7 8 18 24
)                    : 5 6 7 8 18 24
,                    : 15 42
ASSIGN               : 9
BOOLEAN              : 19
CONCAT               : 31
DIVIDE               : 36
ELSE                 : 12
EQ                   : 30
FDIVIDE              : 32
FEQ                  : 28
FLOAT                : 21
FMINUS               : 34
FNEQ                 : 27
FPLUS                : 35
FTIMES               : 33
FUMINUS              : 25
FUNCTION             : 5
IDENTIFIER           : 5 9 14 15 23 24
IF                   : 7
INTEGER              : 22
MINUS                : 38
NEQ                  : 29
PLUS                 : 39
PRINT                : 8
RETURN               : 17
STRING               : 20
TIMES                : 37
UMINUS               : 26
WHILE                : 6
error                : 
{                    : 5 6 7 12
}                    : 5 6 7 12

Nonterminals, with rules where they appear:

arg_list             : 24 42
bool_expr            : 6 7
else_clause          : 7
expr                 : 1 8 9 10 17 18 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 41 42
param_list           : 5 15
program              : 0
return_stmt          : 5
statement            : 4
statement_list       : 2 4 5 6 7 12


state 0

    (0) S' -> . program
    (1) program -> . expr
    (2) program -> . statement_list
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (3) statement_list -> .
    (4) statement_list -> . statement statement_list
    (5) statement -> . FUNCTION IDENTIFIER ( param_list ) { statement_list return_stmt }
    (6) statement -> . WHILE ( bool_expr ) { statement_list }
    (7) statement -> . IF ( bool_expr ) { statement_list } else_clause
    (8) statement -> . PRINT ( expr )
    (9) statement -> . IDENTIFIER ASSIGN expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 9
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11
    $end            reduce using rule 3 (statement_list -> .)
    FUNCTION        shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    PRINT           shift and go to state 16

    program                        shift and go to state 1
    expr                           shift and go to state 2
    statement_list                 shift and go to state 3
    statement                      shift and go to state 12

state 1

    (0) S' -> program .


state 2

    (1) program -> expr .
    (27) expr -> expr . FNEQ expr
    (28) expr -> expr . FEQ expr
    (29) expr -> expr . NEQ expr
    (30) expr -> expr . EQ expr
    (31) expr -> expr . CONCAT expr
    (32) expr -> expr . FDIVIDE expr
    (33) expr -> expr . FTIMES expr
    (34) expr -> expr . FMINUS expr
    (35) expr -> expr . FPLUS expr
    (36) expr -> expr . DIVIDE expr
    (37) expr -> expr . TIMES expr
    (38) expr -> expr . MINUS expr
    (39) expr -> expr . PLUS expr
    $end            reduce using rule 1 (program -> expr .)
    FNEQ            shift and go to state 17
    FEQ             shift and go to state 18
    NEQ             shift and go to state 19
    EQ              shift and go to state 20
    CONCAT          shift and go to state 21
    FDIVIDE         shift and go to state 22
    FTIMES          shift and go to state 23
    FMINUS          shift and go to state 24
    FPLUS           shift and go to state 25
    DIVIDE          shift and go to state 26
    TIMES           shift and go to state 27
    MINUS           shift and go to state 28
    PLUS            shift and go to state 29


state 3

    (2) program -> statement_list .
    $end            reduce using rule 2 (program -> statement_list .)


state 4

    (18) expr -> ( . expr )
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 30

state 5

    (19) expr -> BOOLEAN .
    FNEQ            reduce using rule 19 (expr -> BOOLEAN .)
    FEQ             reduce using rule 19 (expr -> BOOLEAN .)
    NEQ             reduce using rule 19 (expr -> BOOLEAN .)
    EQ              reduce using rule 19 (expr -> BOOLEAN .)
    CONCAT          reduce using rule 19 (expr -> BOOLEAN .)
    FDIVIDE         reduce using rule 19 (expr -> BOOLEAN .)
    FTIMES          reduce using rule 19 (expr -> BOOLEAN .)
    FMINUS          reduce using rule 19 (expr -> BOOLEAN .)
    FPLUS           reduce using rule 19 (expr -> BOOLEAN .)
    DIVIDE          reduce using rule 19 (expr -> BOOLEAN .)
    TIMES           reduce using rule 19 (expr -> BOOLEAN .)
    MINUS           reduce using rule 19 (expr -> BOOLEAN .)
    PLUS            reduce using rule 19 (expr -> BOOLEAN .)
    $end            reduce using rule 19 (expr -> BOOLEAN .)
    )               reduce using rule 19 (expr -> BOOLEAN .)
    ,               reduce using rule 19 (expr -> BOOLEAN .)
    FUNCTION        reduce using rule 19 (expr -> BOOLEAN .)
    WHILE           reduce using rule 19 (expr -> BOOLEAN .)
    IF              reduce using rule 19 (expr -> BOOLEAN .)
    PRINT           reduce using rule 19 (expr -> BOOLEAN .)
    IDENTIFIER      reduce using rule 19 (expr -> BOOLEAN .)
    }               reduce using rule 19 (expr -> BOOLEAN .)
    RETURN          reduce using rule 19 (expr -> BOOLEAN .)


state 6

    (20) expr -> STRING .
    FNEQ            reduce using rule 20 (expr -> STRING .)
    FEQ             reduce using rule 20 (expr -> STRING .)
    NEQ             reduce using rule 20 (expr -> STRING .)
    EQ              reduce using rule 20 (expr -> STRING .)
    CONCAT          reduce using rule 20 (expr -> STRING .)
    FDIVIDE         reduce using rule 20 (expr -> STRING .)
    FTIMES          reduce using rule 20 (expr -> STRING .)
    FMINUS          reduce using rule 20 (expr -> STRING .)
    FPLUS           reduce using rule 20 (expr -> STRING .)
    DIVIDE          reduce using rule 20 (expr -> STRING .)
    TIMES           reduce using rule 20 (expr -> STRING .)
    MINUS           reduce using rule 20 (expr -> STRING .)
    PLUS            reduce using rule 20 (expr -> STRING .)
    $end            reduce using rule 20 (expr -> STRING .)
    )               reduce using rule 20 (expr -> STRING .)
    ,               reduce using rule 20 (expr -> STRING .)
    FUNCTION        reduce using rule 20 (expr -> STRING .)
    WHILE           reduce using rule 20 (expr -> STRING .)
    IF              reduce using rule 20 (expr -> STRING .)
    PRINT           reduce using rule 20 (expr -> STRING .)
    IDENTIFIER      reduce using rule 20 (expr -> STRING .)
    }               reduce using rule 20 (expr -> STRING .)
    RETURN          reduce using rule 20 (expr -> STRING .)


state 7

    (21) expr -> FLOAT .
    FNEQ            reduce using rule 21 (expr -> FLOAT .)
    FEQ             reduce using rule 21 (expr -> FLOAT .)
    NEQ             reduce using rule 21 (expr -> FLOAT .)
    EQ              reduce using rule 21 (expr -> FLOAT .)
    CONCAT          reduce using rule 21 (expr -> FLOAT .)
    FDIVIDE         reduce using rule 21 (expr -> FLOAT .)
    FTIMES          reduce using rule 21 (expr -> FLOAT .)
    FMINUS          reduce using rule 21 (expr -> FLOAT .)
    FPLUS           reduce using rule 21 (expr -> FLOAT .)
    DIVIDE          reduce using rule 21 (expr -> FLOAT .)
    TIMES           reduce using rule 21 (expr -> FLOAT .)
    MINUS           reduce using rule 21 (expr -> FLOAT .)
    PLUS            reduce using rule 21 (expr -> FLOAT .)
    $end            reduce using rule 21 (expr -> FLOAT .)
    )               reduce using rule 21 (expr -> FLOAT .)
    ,               reduce using rule 21 (expr -> FLOAT .)
    FUNCTION        reduce using rule 21 (expr -> FLOAT .)
    WHILE           reduce using rule 21 (expr -> FLOAT .)
    IF              reduce using rule 21 (expr -> FLOAT .)
    PRINT           reduce using rule 21 (expr -> FLOAT .)
    IDENTIFIER      reduce using rule 21 (expr -> FLOAT .)
    }               reduce using rule 21 (expr -> FLOAT .)
    RETURN          reduce using rule 21 (expr -> FLOAT .)


state 8

    (22) expr -> INTEGER .
    FNEQ            reduce using rule 22 (expr -> INTEGER .)
    FEQ             reduce using rule 22 (expr -> INTEGER .)
    NEQ             reduce using rule 22 (expr -> INTEGER .)
    EQ              reduce using rule 22 (expr -> INTEGER .)
    CONCAT          reduce using rule 22 (expr -> INTEGER .)
    FDIVIDE         reduce using rule 22 (expr -> INTEGER .)
    FTIMES          reduce using rule 22 (expr -> INTEGER .)
    FMINUS          reduce using rule 22 (expr -> INTEGER .)
    FPLUS           reduce using rule 22 (expr -> INTEGER .)
    DIVIDE          reduce using rule 22 (expr -> INTEGER .)
    TIMES           reduce using rule 22 (expr -> INTEGER .)
    MINUS           reduce using rule 22 (expr -> INTEGER .)
    PLUS            reduce using rule 22 (expr -> INTEGER .)
    $end            reduce using rule 22 (expr -> INTEGER .)
    )               reduce using rule 22 (expr -> INTEGER .)
    ,               reduce using rule 22 (expr -> INTEGER .)
    FUNCTION        reduce using rule 22 (expr -> INTEGER .)
    WHILE           reduce using rule 22 (expr -> INTEGER .)
    IF              reduce using rule 22 (expr -> INTEGER .)
    PRINT           reduce using rule 22 (expr -> INTEGER .)
    IDENTIFIER      reduce using rule 22 (expr -> INTEGER .)
    }               reduce using rule 22 (expr -> INTEGER .)
    RETURN          reduce using rule 22 (expr -> INTEGER .)


state 9

    (23) expr -> IDENTIFIER .
    (24) expr -> IDENTIFIER . ( arg_list )
    (9) statement -> IDENTIFIER . ASSIGN expr
    FNEQ            reduce using rule 23 (expr -> IDENTIFIER .)
    FEQ             reduce using rule 23 (expr -> IDENTIFIER .)
    NEQ             reduce using rule 23 (expr -> IDENTIFIER .)
    EQ              reduce using rule 23 (expr -> IDENTIFIER .)
    CONCAT          reduce using rule 23 (expr -> IDENTIFIER .)
    FDIVIDE         reduce using rule 23 (expr -> IDENTIFIER .)
    FTIMES          reduce using rule 23 (expr -> IDENTIFIER .)
    FMINUS          reduce using rule 23 (expr -> IDENTIFIER .)
    FPLUS           reduce using rule 23 (expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 23 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 23 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 23 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 23 (expr -> IDENTIFIER .)
    $end            reduce using rule 23 (expr -> IDENTIFIER .)
    (               shift and go to state 32
    ASSIGN          shift and go to state 33


state 10

    (25) expr -> FUMINUS . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 34

state 11

    (26) expr -> UMINUS . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 35

state 12

    (4) statement_list -> statement . statement_list
    (3) statement_list -> .
    (4) statement_list -> . statement statement_list
    (5) statement -> . FUNCTION IDENTIFIER ( param_list ) { statement_list return_stmt }
    (6) statement -> . WHILE ( bool_expr ) { statement_list }
    (7) statement -> . IF ( bool_expr ) { statement_list } else_clause
    (8) statement -> . PRINT ( expr )
    (9) statement -> . IDENTIFIER ASSIGN expr
    $end            reduce using rule 3 (statement_list -> .)
    }               reduce using rule 3 (statement_list -> .)
    RETURN          reduce using rule 3 (statement_list -> .)
    FUNCTION        shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    IDENTIFIER      shift and go to state 37

    statement                      shift and go to state 12
    statement_list                 shift and go to state 36

state 13

    (5) statement -> FUNCTION . IDENTIFIER ( param_list ) { statement_list return_stmt }
    IDENTIFIER      shift and go to state 38


state 14

    (6) statement -> WHILE . ( bool_expr ) { statement_list }
    (               shift and go to state 39


state 15

    (7) statement -> IF . ( bool_expr ) { statement_list } else_clause
    (               shift and go to state 40


state 16

    (8) statement -> PRINT . ( expr )
    (               shift and go to state 41


state 17

    (27) expr -> expr FNEQ . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 42

state 18

    (28) expr -> expr FEQ . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 43

state 19

    (29) expr -> expr NEQ . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 44

state 20

    (30) expr -> expr EQ . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 45

state 21

    (31) expr -> expr CONCAT . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 46

state 22

    (32) expr -> expr FDIVIDE . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 47

state 23

    (33) expr -> expr FTIMES . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 48

state 24

    (34) expr -> expr FMINUS . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 49

state 25

    (35) expr -> expr FPLUS . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 50

state 26

    (36) expr -> expr DIVIDE . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 51

state 27

    (37) expr -> expr TIMES . expr
    (18) expr -> . ( expr )
    (19) expr -> . BOOLEAN
    (20) expr -> . STRING
    (21) expr -> . FLOAT
    (22) expr -> . INTEGER
    (23) expr -> . IDENTIFIER
    (24) expr -> . IDENTIFIER ( arg_list )
    (25) expr -> . FUMINUS expr
    (26) expr -> . UMINUS expr
    (27) expr -> . expr FNEQ expr
    (28) expr -> . expr FEQ expr
    (29) expr -> . expr NEQ expr
    (30) expr -> . expr EQ expr
    (31) expr -> . expr CONCAT expr
    (32) expr -> . expr FDIVIDE expr
    (33) expr -> . expr FTIMES expr
    (34) expr -> . expr FMINUS expr
    (35) expr -> . expr FPLUS expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr TIMES expr
    (38) expr -> . expr MINUS expr
    (39) expr -> . expr PLUS expr
    (               shift and go to state 4
    BOOLEAN         shift and go to state 5
    STRING          shift and go to state 6
    FLOAT           shift and go to state 7
    INTEGER         shift and go to state 8
    IDENTIFIER      shift and go to state 31
    FUMINUS         shift and go to state 10
    UMINUS          shift and go to state 11

    expr                           shift and go to state 52

state 28
